Post fresh PopOS 20.10 install

--- a/TODO
+++ b/TODO
@@ -1,8 +1,9 @@
 vscode config (extensions)
-python (pyenv)
 github/gitlab keys
 RSS feed for notifications
 packer
 ansible
 cli for: aws, gcp, azure
 dive (docker layer inspector)
+cron updatedb
+script to update packages (non-apt)
